--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -54,7 +54,7 @@
             tools:layout_editor_absoluteY="1dp">
 
             <EditText
-                android:id="@+id/editTextText"
+                android:id="@+id/login_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="43dp"
@@ -67,7 +67,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/resetPassword_button"
                 android:layout_width="379dp"
                 android:layout_height="60dp"
                 android:text="Reset password"
@@ -83,7 +83,7 @@
                 tools:layout_editor_absoluteY="433dp">
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/signup_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
@@ -102,7 +102,7 @@
                 tools:layout_editor_absoluteY="433dp" />
 
             <EditText
-                android:id="@+id/editTextText4"
+                android:id="@+id/new_forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -110,11 +110,11 @@
                 android:ems="10"
                 android:inputType="text"
                 android:text="New Password"
-                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintBottom_toTopOf="@+id/resetPassword_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+                app:layout_constraintTop_toBottomOf="@+id/login_email" />
 
             <TextView
                 android:id="@+id/textView2"
